fixed centering menu items on small screens and using fixed navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,29 @@
 * {
-  padding: 0;
-  margin: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
 }
 
-ul a, h3, footer {
+ul a,
+h3 {
   font-family: "Montserrat", sans-serif;
 }
 
 header {
+  position: fixed;
+  width: 100%;
   display: flex;
-	/* justify-content: center; */
-	flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
   background-color: #fff;
-	height: 100px;
-  padding: 30px 20px;
+  padding: 0px 20px;
 }
 
 .menu {
-	display: flex;
+  display: flex;
 }
 
 .logo img {
@@ -35,13 +34,13 @@ header {
 }
 
 .logo {
-	align-self: center;
-	padding: 10px;
+  align-self: center;
+  padding: 10px;
 }
 
 ul {
-	padding: 0;
-	align-self: center;
+  padding: 0;
+  align-self: center;
 }
 
 ul li {
@@ -85,60 +84,62 @@ ul li {
 }
 
 /*Main styling*/
-.container {
-  margin: 20px;
-}
 
 main .landing-image {
-  background-image: url(../images/bg.jpg);
-  /*background-image: url('https://demo.tagdiv.com/newspaper_baby_pro/wp-content/uploads/2020/01/13.jpg');*/
+  background-image: url('../images/bg.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 70vh;
+  height: 95vh;
+}
+
+.title-text {
+  padding: 0 6px;
+}
+.container span {
+  color: #999;
+  text-transform: uppercase;
+  font-family: Montserrat !important;
+  font-size: 11px;
+  line-height: 1.2;
+}
+
+.container i {
+  color: #999;
+  line-height: 10;
+}
+
+.container h1 {
+  font-size: 54px;
+  color: #444;
+  font-family: Noto Serif TC !important;
+  font-weight: 700;
+  text-transform: none;
+  margin: 0;
 }
 
 .image-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 40px;
-
+  padding: 20px 6px;
+  float: left;
+  width: 25%;
 }
 
-.image-container a {
-  text-decoration: none;
+.gallery {
+  border: 1px solid #FCE0E0;
+  border-radius: 2px;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+.gallery .description {
   color: #444;
   font-family: 'Noto Serif TC', serif;
-}
-
-
-figure img {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 5px;
-  width: 100%;
-  height: 250px;
-}
-
-.image2, .image3 {
-  padding-left: 20px;
-}
-
-figcaption {
   text-align: center;
-}
-
-
-footer {
-  background-color: lightblue;
-  width: 100%
-  padding: 40px;
-}
-
-footer span {
-  padding: 40px;
+  padding: 15px;
 }
 
 
@@ -146,31 +147,38 @@ footer span {
 
   header {
     display: flex;
-		justify-content: space-between;
-		flex-direction: row;
-		background-color: #FFFAFA;
-		padding: 0 20px;
-	}
-	
-	.logo {
-		line-height: 140px;
-		align-self: auto;
-		padding: 0;
-	}
+    justify-content: space-between;
+    flex-direction: row;
+    background-color: #FFFAFA;
+    padding: 0 20px;
+    position: fixed;
+    width: 100%;
+  }
 
-	.logo img {
-		width: 50px;
-		height: 50px;
-	}
+  .logo {
+    line-height: 140px;
+    align-self: auto;
+    padding: 0;
+  }
+
+  .logo img {
+    width: 50px;
+    height: 50px;
+  }
 
   .show-menu-btn,
   .hide-menu-btn {
     display: inline-block;
   }
 
+  .menu li {
+    margin-left: 0;
+  }
+
   .menu {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .menu {
@@ -181,16 +189,19 @@ footer span {
     right: -100%;
     top: 100px;
     text-align: center;
-    padding: 80px 0;
     line-height: 100px;
     transition: .7s;
   }
 
   .menu li a {
     display: block;
-    /* padding: 20px; */
     color: #fff;
     font-size: 1.2em;
+  }
+
+  .menu li a:hover {
+    color: #fff;
+    transition: 0.7;
   }
 
   #toggle:checked~.menu {
@@ -198,24 +209,25 @@ footer span {
   }
 
   main .landing-image {
-    background-image: url(../images/sm.jpg);
+    background-image: url("../images/sm.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
   }
 
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 700px) {
   .image-container {
-    text-align: center;
-    display: block;
+    width: 50%;
+    margin: 2px 0;
   }
+}
 
-  figure img {
+@media screen and (max-width: 500px) {
+  .image-container {
     width: 100%;
-    height: auto;
   }
 }
